<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_sim</name>
  <version>0.0.0</version>
  <description>
    rover_sim pkg contains the nodes to simulate the rover arm
  </description>
  <maintainer email="emile.savoie3@usherbrooke.ca">emile</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rover_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>