<?xml version="1.0"?>
<package format="2">
  <name>rover_viz</name>
  <version>0.0.0</version>
  <description>The rover_viz package</description>

  <maintainer email="jeremie@todo.todo">jeremie</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rviz_imu_plugin</exec_depend>
  <exec_depend>mapviz</exec_depend>
  <exec_depend>mapviz_plugins</exec_depend>
  <exec_depend>tile_map</exec_depend>
  <exec_depend>multires_image</exec_depend>
</package>
