<?xml version="1.0"?>
<package>
  <name>differential_drive</name>
  <version>0.1.0</version>
  <description>
    This package takes a twist command and converts it to velocity targets for the left and right wheels. 
    It also takes the encoder values of both sides and calculates the odometry.
  </description>

  <maintainer email="jeremie.bourque@usherbrooke.ca">Jeremie Bourque</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
