<?xml version="1.0"?>
<package format="2">
    <name>rover_antenna</name>
    <version>0.0.0</version>
    <description>The rover_antenna package</description>

    <maintainer email="phil@todo.todo">phil</maintainer>
    <maintainer email="aude@todo.todo">aude</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>joy</depend>
    <depend>rover_control_msgs</depend>

    <!-- Needs to gtfo -->
    <depend>rover_udes</depend>

    <exec_depend>message_runtime</exec_depend>

</package>
